[package]
name = "ord-custom-indexer-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ord = { git = "https://github.com/magicoss/ord-kafka.git", rev = "fff4cc4" }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
clap = { version = "4.4.2", features = ["derive"] }