[package]
name = "bord-transfers-analyzer"
version = "0.0.1"
edition = "2021"

[dependencies]
mongodb = "2.0"
ord = { git = "https://github.com/magicoss/ord-kafka.git", rev = "fff4cc4" }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
